# rust-on-nails

./: Cargo.toml  Justfile
crates/db/: Cargo.toml  build.rs
crates/db/src/: lib.rs
crates/web-pages/: Cargo.toml
crates/web-pages/src/: layout.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: config.rs  error.rs  main.rs  root.rs
