[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["json", "http1", "tokio"] }
axum-extra = { version = "0.9", features = ["form"] }
db = { version = "0.1.0", path = "../db" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", default-features = false }
tower-livereload = "0.9"
